--- a/app/templates/app/stats.html
+++ b/app/templates/app/stats.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Stats</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+<center>
 <div id="container" style="width: 75%;">
+    <div class="card" style="width: 50rem;margin-top:20px">
+      <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
+      <div class="card-body">
+        <h5 class="card-title">CyberSophie - Stats</h5>
+        <p class="card-text">{{ question.enonce }}</p>
+       <p class="card-text">Du {{ start_date }} au {{ end_date }}</p>
+        <div style="margin:10px 10px 10px 10px">
+    {% if reponses %}
+        <li>
+        {% for reponse in reponses %}
+            <ul>{{ reponse.date }} : {{ reponse.valeur }}</ul>
+        {% endfor %}
+        </li>
+    {% else %}
     <canvas id="pie-chart"></canvas>
-  </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script>
@@ -18,9 +34,9 @@
         datasets: [{
           data: {{ data|safe }},
           backgroundColor: [
-            '#696969', '#808080', '#A9A9A9', '#C0C0C0', '#D3D3D3'
+            '#23c264', '#e5e512', '#ecad10', '#ff4003', '#000'
           ],
-          label: 'Population'
+          label: 'Réponses'
         }],
         labels: {{ labels|safe }}
       },
@@ -35,5 +51,12 @@
     };
 
   </script>
+{% endif %}
+    </div>
+      </div>
+    </div>
+</div>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</center>
 </body>
 </html>
