--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center>
-    <div class="card" style="width: 50rem;margin-top:20px">
+    <div class="card" style="width: 80%;margin-top:20px">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
         <h5 class="card-title">CyberSophie - Questionnaire</h5>
