[FIX] Adjusting margin

--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <center>
-    <div class="card" style="width: 80%;margin-top:20px">
+    <div class="row">
+  <div class="col-10">
+    <div class="card" style="margin-top:20px">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
         <h5 class="card-title">CyberSophie - Questionnaire</h5>
@@ -43,6 +45,8 @@
           {% endif %}
         </form>
       </div>
+    </div>
+  </div>
     </div>
 </center>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
