--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -8,7 +8,7 @@
 <body>
 <center>
     <div class="row">
-  <div class="col-10">
+  <div class="col">
     <div class="card" style="margin-top:20px">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
