--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -13,7 +13,7 @@
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
         <h5 class="card-title">CyberSophie - Questionnaire</h5>
-        <p class="card-text">CyberSophie s'occupe de toi pendant le confinement ! Répond de manière anonyme à ce questionnaire de moral. N'hésite pas à nous laisser ton adresse e-mail dans le cas où tu souhaiterais obtenir de l'aide ou si tu as besoin de plus d'informations.</p>
+        <p class="card-text">CyberSophie s'occupe de toi pendant le confinement !<br/>Répond de manière anonyme à ce questionnaire de moral.</br>N'hésite pas à nous laisser ton adresse e-mail dans le cas où tu souhaiterais obtenir de l'aide ou si tu as besoin de plus d'informations.</p>
         <form action="/complete" method="post"> {% csrf_token %}
         <div style="margin:10px 10px 10px 10px">
             {% for q in questions %}
