--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -2,13 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CyberSophie</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <div class="row">
   <div class="col">
-    <div class="card text-center" style="margin:20px">
+    <div class="card text-center" style="margin:20px;">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
         <h5 class="card-title">CyberSophie - Questionnaire</h5>
