--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="row">
-  <div class="col">
+  <div class="col-10">
     <div class="card text-center" style="margin:20px;">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
@@ -22,7 +22,7 @@
                         {{ q }}
                     </div>
                     {% if q.isLibre %}
-                        <textarea rows="4" cols="50" name="{{ q.id }}"></textarea>
+                        <textarea rows="4" cols="30" name="{{ q.id }}"></textarea>
                     {% else %}
                         {% for c in choix %}
                              {% if c.question == q %}
