--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -9,7 +9,7 @@
 <body>
     <div class="row">
   <div class="col-12">
-    <div class="card text-center" style="margin:6px;">
+    <div class="card text-center" style="margin:6px 6px 6px 6px;">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
         <h5 class="card-title">CyberSophie - Questionnaire</h5>
