--- a/app/templates/app/sondage.html
+++ b/app/templates/app/sondage.html
@@ -7,8 +7,9 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <div class="row">
-  <div class="col-12">
+
+    <div class="row" style="margin:10px;">
+  <div class="col-12" style="padding:0;">
     <div class="card text-center">
       <!--<img class="card-img-top" src="..." alt="CyberSophie">-->
       <div class="card-body">
